<resources>
    <string name="app_name">Booker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sync_in_progress">Sync In Progress</string>
    <string name="sync_menu_item">Sync</string>
    <string name="no_book">No book found.  Perform a sync.</string>
    <string name="chapter">Chapter</string>
    <string name="book_title">Book Title</string>
    <string name="progress">progress</string>
    <string name="sync_status_connecting">Connecting to host:</string>
    <string name="cannot_connect">Could not connect to host...</string>
    <string name="syncing">Sync in progress...</string>
    <string name="sync_complete">Sync is complete!</string>
    <string name="sync_failed">Sync failed...</string>
    <string name="library">Library</string>
    <string name="restart_question">This book is completed, do you want to restart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="complete">Complete</string>
</resources>