<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.kegel.booker.PlaybackFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SyncFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_LibraryFragment"
            app:destination="@id/LibraryFragment" />
    </fragment>
    <fragment
        android:id="@+id/SyncFragment"
        android:name="com.kegel.booker.SyncFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_sync"/>
    <fragment
        android:id="@+id/LibraryFragment"
        android:name="com.kegel.booker.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library"/>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.kegel.booker.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>