<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chapter_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaybackFragment">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/book_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mediaButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/rewindButton"
            android:layout_width="91dp"
            android:layout_height="77dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@android:drawable/ic_media_rew" />

        <ImageButton
            android:id="@+id/playStopButton"
            android:layout_width="91dp"
            android:layout_height="77dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/fastforwardButton"
            android:layout_width="91dp"
            android:layout_height="77dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@android:drawable/ic_media_ff" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/CustomProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:max="100"
        android:progress="50"
        android:secondaryProgress="0"
        app:layout_constraintBottom_toTopOf="@+id/progress_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/progress"
        app:layout_constraintBottom_toTopOf="@+id/mediaButtonGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chapter_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/chapter"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="374dp"
        android:layout_height="397dp"
        app:layout_constraintBottom_toTopOf="@+id/chapter_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_title"
        tools:src="@tools:sample/backgrounds/scenic" />

</androidx.constraintlayout.widget.ConstraintLayout>